// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component should render correctly with bottom labelPosition 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 1.6rem 0;
}

.c6 {
  position: relative;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c6::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  transition: transform 100ms ease-out;
}

.c4 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c4~.c5 {
  border-color: #13181D;
}

.c4~.c5::after {
  background-color: #13181D;
}

.c4:checked~.c5::after {
  transform: translate(-50%,-50%) scale(1);
}

.c4:disabled~.c5 {
  border-color: #98A7B7;
}

.c4:disabled~.c5::after {
  background-color: #98A7B7;
}

.c4:not(:disabled):checked~.c5 {
  border-color: #3872D2;
}

.c4:not(:disabled):checked~.c5::after {
  background-color: #3872D2;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c3 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  flex-grow: 0;
  flex-shrink: 0;
}

.c0 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem;
  justify-content: center;
  flex-direction: column-reverse;
}

.c0:hover .c5 {
  border-color: #3872D2;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c0:active .c5 {
  border-color: #3061B3;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    labelposition="bottom"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      labelposition="bottom"
      textalign="initial"
      textcolor="inherit"
      type="radio"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        type="radio"
        value="female"
      />
      <div
        class="c5 c6"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked false and checked state 1`] = `
.c4 {
  position: relative;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c4::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  transition: transform 100ms ease-out;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c2~.c3 {
  border-color: #13181D;
}

.c2~.c3::after {
  background-color: #13181D;
}

.c2:checked~.c3::after {
  transform: translate(-50%,-50%) scale(1);
}

.c2:disabled~.c3 {
  border-color: #98A7B7;
}

.c2:disabled~.c3::after {
  background-color: #98A7B7;
}

.c2:not(:disabled):checked~.c3 {
  border-color: #3872D2;
}

.c2:not(:disabled):checked~.c3::after {
  background-color: #3872D2;
}

.c2:not(:disabled):focus~.c3 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c1 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  flex-grow: 0;
  flex-shrink: 0;
}

.c0 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c0:hover .c3 {
  border-color: #3872D2;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c0:active .c3 {
  border-color: #3061B3;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
}

<div>
  <label
    class="c0"
    for=""
    id="-wrapper"
    labelposition="right"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        id=""
        type="radio"
        value="female"
      />
      <div
        class="c3 c4"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked false and disabled state 1`] = `
.c4 {
  position: relative;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c4::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  transition: transform 100ms ease-out;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c2~.c3 {
  border-color: #13181D;
}

.c2~.c3::after {
  background-color: #13181D;
}

.c2:checked~.c3::after {
  transform: translate(-50%,-50%) scale(1);
}

.c2:disabled~.c3 {
  border-color: #98A7B7;
}

.c2:disabled~.c3::after {
  background-color: #98A7B7;
}

.c2:not(:disabled):checked~.c3 {
  border-color: #3872D2;
}

.c2:not(:disabled):checked~.c3::after {
  background-color: #3872D2;
}

.c2:not(:disabled):focus~.c3 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c1 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  flex-grow: 0;
  flex-shrink: 0;
}

.c0 {
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

<div>
  <label
    class="c0"
    disabled=""
    for=""
    id="-wrapper"
    labelposition="right"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        disabled=""
        id=""
        type="radio"
        value="female"
      />
      <div
        class="c3 c4"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked false and hasError state 1`] = `
.c4 {
  position: relative;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c4::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  transition: transform 100ms ease-out;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c2~.c3 {
  border-color: #D73A43;
}

.c2~.c3::after {
  background-color: #D73A43;
}

.c2:checked~.c3::after {
  transform: translate(-50%,-50%) scale(1);
}

.c2:disabled~.c3 {
  border-color: #98A7B7;
}

.c2:disabled~.c3::after {
  background-color: #98A7B7;
}

.c2:not(:disabled):checked~.c3 {
  border-color: #D73A43;
}

.c2:not(:disabled):checked~.c3::after {
  background-color: #D73A43;
}

.c2:not(:disabled):focus~.c3 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
}

.c1 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  flex-grow: 0;
  flex-shrink: 0;
}

.c0 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c0:hover .c3 {
  border-color: #D73A43;
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
}

.c0:active .c3 {
  border-color: #B73139;
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.5);
}

<div>
  <label
    class="c0"
    for=""
    id="-wrapper"
    labelposition="right"
  >
    <div
      class="c1"
    >
      <input
        class="c2"
        id=""
        type="radio"
        value="female"
      />
      <div
        class="c3 c4"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked true and checked state 1`] = `
.c4 {
  position: relative;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c4::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  transition: transform 100ms ease-out;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c2~.c3 {
  border-color: #13181D;
}

.c2~.c3::after {
  background-color: #13181D;
}

.c2:checked~.c3::after {
  transform: translate(-50%,-50%) scale(1);
}

.c2:disabled~.c3 {
  border-color: #98A7B7;
}

.c2:disabled~.c3::after {
  background-color: #98A7B7;
}

.c2:not(:disabled):checked~.c3 {
  border-color: #3872D2;
}

.c2:not(:disabled):checked~.c3::after {
  background-color: #3872D2;
}

.c2:not(:disabled):focus~.c3 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c1 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  flex-grow: 0;
  flex-shrink: 0;
}

.c0 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

<div>
  <label
    class="c0"
    for=""
    id="-wrapper"
    labelposition="right"
  >
    <div
      class="c1"
    >
      <input
        checked=""
        class="c2"
        id=""
        type="radio"
        value="female"
      />
      <div
        class="c3 c4"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked true and disabled state 1`] = `
.c4 {
  position: relative;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c4::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  transition: transform 100ms ease-out;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c2~.c3 {
  border-color: #13181D;
}

.c2~.c3::after {
  background-color: #13181D;
}

.c2:checked~.c3::after {
  transform: translate(-50%,-50%) scale(1);
}

.c2:disabled~.c3 {
  border-color: #98A7B7;
}

.c2:disabled~.c3::after {
  background-color: #98A7B7;
}

.c2:not(:disabled):checked~.c3 {
  border-color: #3872D2;
}

.c2:not(:disabled):checked~.c3::after {
  background-color: #3872D2;
}

.c2:not(:disabled):focus~.c3 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c1 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  flex-grow: 0;
  flex-shrink: 0;
}

.c0 {
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

<div>
  <label
    class="c0"
    disabled=""
    for=""
    id="-wrapper"
    labelposition="right"
  >
    <div
      class="c1"
    >
      <input
        checked=""
        class="c2"
        disabled=""
        id=""
        type="radio"
        value="female"
      />
      <div
        class="c3 c4"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with checked true and hasError state 1`] = `
.c4 {
  position: relative;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c4::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  transition: transform 100ms ease-out;
}

.c2 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c2~.c3 {
  border-color: #D73A43;
}

.c2~.c3::after {
  background-color: #D73A43;
}

.c2:checked~.c3::after {
  transform: translate(-50%,-50%) scale(1);
}

.c2:disabled~.c3 {
  border-color: #98A7B7;
}

.c2:disabled~.c3::after {
  background-color: #98A7B7;
}

.c2:not(:disabled):checked~.c3 {
  border-color: #D73A43;
}

.c2:not(:disabled):checked~.c3::after {
  background-color: #D73A43;
}

.c2:not(:disabled):focus~.c3 {
  box-shadow: 0 0 0.8rem 0 rgba(215,58,67,0.35);
}

.c1 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  flex-grow: 0;
  flex-shrink: 0;
}

.c0 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

<div>
  <label
    class="c0"
    for=""
    id="-wrapper"
    labelposition="right"
  >
    <div
      class="c1"
    >
      <input
        checked=""
        class="c2"
        id=""
        type="radio"
        value="female"
      />
      <div
        class="c3 c4"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with left labelPosition 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c6 {
  position: relative;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c6::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  transition: transform 100ms ease-out;
}

.c4 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c4~.c5 {
  border-color: #13181D;
}

.c4~.c5::after {
  background-color: #13181D;
}

.c4:checked~.c5::after {
  transform: translate(-50%,-50%) scale(1);
}

.c4:disabled~.c5 {
  border-color: #98A7B7;
}

.c4:disabled~.c5::after {
  background-color: #98A7B7;
}

.c4:not(:disabled):checked~.c5 {
  border-color: #3872D2;
}

.c4:not(:disabled):checked~.c5::after {
  background-color: #3872D2;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c3 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  flex-grow: 0;
  flex-shrink: 0;
}

.c0 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  justify-content: flex-start;
  align-items: center;
  flex-direction: row;
}

.c0:hover .c5 {
  border-color: #3872D2;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c0:active .c5 {
  border-color: #3061B3;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    labelposition="left"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      labelposition="left"
      textalign="initial"
      textcolor="inherit"
      type="radio"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        type="radio"
        value="female"
      />
      <div
        class="c5 c6"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with right labelPosition 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c6 {
  position: relative;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c6::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  transition: transform 100ms ease-out;
}

.c4 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c4~.c5 {
  border-color: #13181D;
}

.c4~.c5::after {
  background-color: #13181D;
}

.c4:checked~.c5::after {
  transform: translate(-50%,-50%) scale(1);
}

.c4:disabled~.c5 {
  border-color: #98A7B7;
}

.c4:disabled~.c5::after {
  background-color: #98A7B7;
}

.c4:not(:disabled):checked~.c5 {
  border-color: #3872D2;
}

.c4:not(:disabled):checked~.c5::after {
  background-color: #3872D2;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c3 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  flex-grow: 0;
  flex-shrink: 0;
}

.c0 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c0:hover .c5 {
  border-color: #3872D2;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c0:active .c5 {
  border-color: #3061B3;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    labelposition="right"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      labelposition="right"
      textalign="initial"
      textcolor="inherit"
      type="radio"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        type="radio"
        value="female"
      />
      <div
        class="c5 c6"
      />
    </div>
  </label>
</div>
`;

exports[`Radio component should render correctly with top labelPosition 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c2 {
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 1.6rem 0;
}

.c6 {
  position: relative;
  transition: all 100ms ease-out;
  box-sizing: border-box;
  border: 0.15rem solid;
  width: 100%;
  height: 100%;
  border-radius: 100%;
}

.c6::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 67%;
  height: 67%;
  transform: translate(-50%,-50%) scale(0);
  border-radius: 100%;
  transition: transform 100ms ease-out;
}

.c4 {
  position: absolute;
  opacity: 0;
  width: 1%;
  height: 1%;
  margin: 0;
}

.c4~.c5 {
  border-color: #13181D;
}

.c4~.c5::after {
  background-color: #13181D;
}

.c4:checked~.c5::after {
  transform: translate(-50%,-50%) scale(1);
}

.c4:disabled~.c5 {
  border-color: #98A7B7;
}

.c4:disabled~.c5::after {
  background-color: #98A7B7;
}

.c4:not(:disabled):checked~.c5 {
  border-color: #3872D2;
}

.c4:not(:disabled):checked~.c5::after {
  background-color: #3872D2;
}

.c4:not(:disabled):focus~.c5 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c3 {
  margin: 0.3rem;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
  border-radius: 100%;
  flex-grow: 0;
  flex-shrink: 0;
}

.c0 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem;
  flex-direction: column;
  justify-content: center;
}

.c0:hover .c5 {
  border-color: #3872D2;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
}

.c0:active .c5 {
  border-color: #3061B3;
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
}

<div>
  <label
    class="c0"
    for="Dummy"
    id="Dummy-wrapper"
    labelposition="top"
  >
    <span
      class="c1 c2"
      id="Dummy-label"
      labelposition="top"
      textalign="initial"
      textcolor="inherit"
      type="radio"
    >
      Dummy
    </span>
    <div
      class="c3"
    >
      <input
        class="c4"
        id="Dummy"
        type="radio"
        value="female"
      />
      <div
        class="c5 c6"
      />
    </div>
  </label>
</div>
`;
